--- a/components/src/style.css
+++ b/components/src/style.css
@@ -3,10 +3,15 @@ footer{position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
+    background-color: rgb(131, 124, 124);
     color: white;
     text-align: center;}
     
-    .card{width: 50%;
-    margin: 8% 28%;
-border-color:15px solid tomato;}
+.card{
+    width: 50%;
+    margin: 5% 28%;
+    padding: 2%; 
+    border: 1px solid;  
+    box-shadow: 5px 10px 8px #888888;}
+
+.form-control{margin-bottom: 2%;}
